# pawmed-ai-prod

./: README.md  docker-compose.yml
.github/workflows/: sync-upstream.yml  trigger-prod-sync.yml
client/: Dockerfile.dev  index.html  package.json  pnpm-lock.yaml
client/public/: manifest.json  robots.txt  sitemap.xml
client/src/: routeTree.gen.ts  styles.css
client/src/assets/: pawmed-cat.json
client/src/components/: Header.tsx  Seo.tsx  SiteStructuredData.tsx
client/src/components/motion/: FadeChild.tsx  FadeIn.tsx  FadeStagger.tsx
client/src/components/ui/: aurora-background.tsx  background-lines.tsx  bento-grid.tsx  dialog.tsx  infinite-moving-cards.tsx
client/src/features/classify-dss/: ClassifyDiseaseView.tsx  types.ts
client/src/features/classify-dss/api/: classifyDisease.ts
client/src/features/classify-dss/components/: CameraModal.tsx  ImageUpload.tsx  ResultSkeletonLoader.tsx  ResultsSection.tsx  UserTypeDialog.tsx
client/src/features/classify-dss/hooks/: useClassifyDisease.ts
client/src/features/home/: HomeView.tsx
client/src/routes/: __root.tsx  index.tsx
client/src/routes/classify/: index.tsx
client/src/routes/home/: index.tsx
client/src/stores/: userTypeStore.ts
client/src/utils/: seo-schema.ts
server/: Dockerfile  entrypoint.sh  gunicorn.conf.py  nginx.conf  pyproject.toml  requirements.txt
server/classify_dss/: serializers.py  throttles.py  views.py
server/classify_dss/services/: disease_classifier.py
server/config/: pysecrets.py
server/core/: health.py  settings.py  urls.py
